# CS15466-Game1

./: .gitignore  CMakeLists.txt  Level.cpp  Level.h  Maekfile.js  PlayMode.cpp  PlayMode.hpp  README.md  asset_pipeline.cpp  asset_pipeline.h  main.cpp
assets/: levels.xcf  sprites.xcf
